# attacc

./: docker-compose.yml  redis_channel_to_jsonl.py  redis_replay_jsonl.py  test-submitter-server.py
example-exploit/: attacc.json  exploit.py
flagged/: Cargo.toml  README.md
flagged/src/: config.rs  events.rs  flaghandler.rs  main.rs  proc.rs  submitter.rs
flagged/src/ctfapi/: enowars.rs  faust.rs  forcad.rs  mhackectf.rs  mod.rs  ructf.rs  saarctf.rs
grafana/: config.monitoring
prometheus/: prometheus.yml
statserver/: .gitignore  .scalafmt.conf  build.sbt  events.jsonl  import_events.py
statserver/project/: plugins.sbt
statserver/src/main/resources/: application.conf
statserver/src/main/scala/attacc/: ApplicationState.scala  EventHandling.scala  Events.scala  Instances.scala  Main.scala  Metrics.scala  Queries.scala  QueryHandling.scala  Util.scala  config.scala
statserver/src/main/scala/attacc/config/: Config.scala  package.scala
statserver/src/main/scala/attacc/eventsource/: package.scala
statserver/src/main/scala/attacc/http/: ApiRoutes.scala  StatsService.scala  WebsocketRoutes.scala
statserver/src/main/scala/attacc/log/: Log.scala  Slf4jLog.scala  package.scala
statserver/src/main/scala/attacc/observables/: InMemoryStore.scala  Observables.scala  package.scala
statserver/src/main/scala/attacc/runstore/: RedisRunStore.scala  RunStore.scala  package.scala
