[package]
name = "flagged"
version = "0.1.0"
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
hostname = "0.3.1"
tokio = { version = "0.2.16", features = ["macros", "rt-threaded", "process", "sync", "time", "blocking"] }
bloom = "0.3.2"
clap = "3.0.0-beta.1"
futures = "0.3.4"
regex = "1.3.6"
redis = "0.16.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }

[features]
default = [
    "ctfapi-saarctf",
    "ctfapi-ructf",
    "ctfapi-forcad",
    "ctfapi-faust",
    "ctfapi-enowars"
]
ctfapi-saarctf = []
ctfapi-ructf = []
ctfapi-forcad = []
ctfapi-faust = []
ctfapi-enowars = []
