[package]
name = "flagged"
version = "0.1.0"
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
hostname = "0.3.1"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread", "process", "sync", "time", "io-util"] }
bloom = "0.3.2"
clap = { version = "3.1.5", features = ["derive"] }
futures = "0.3.21"
regex = "1.5.4"
redis = "0.21.5"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
unicode-segmentation = { version = "1.9.0", optional = true }
reqwest = { version = "0.11.9", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }

[features]
default = [
    "ctfapi-saarctf",
    "ctfapi-ructf",
    "ctfapi-forcad",
    "ctfapi-faust",
    "ctfapi-enowars",
    "ctfapi-mhackectf",
]
ctfapi-saarctf = []
ctfapi-ructf = ["reqwest"]
ctfapi-forcad = []
ctfapi-faust = []
ctfapi-enowars = []
ctfapi-mhackectf = ["unicode-segmentation"]
